# magma

./: .gitignore  BUGS.txt  CMakeLists.txt  COPYRIGHT  HIP-notes.txt  MANIFEST.in  Makefile  Makefile.internal  Makefile.subdir  README  README-HIP  README-Windows  README-v2.txt  README.hipMAGMA  README_FP16_Iterative_Refinement.txt  ReleaseChecklist  ReleaseNotes  dpct.sh  install_mkl.py  magmaConfig.cmake.in  make.check-aocl-blis  make.check-cuda  make.check-hip  make.gen.hipMAGMA  make.gen.interface_hip  make.gen.magmablas_hip  make.gen.testing_hip  readme_iterative_refinement  setup.py
control/: Makefile.src  batched_gesvj_param.h  batched_kernel_param.h  constants.cpp  gemm_batched_decision_tree.h  gemm_batched_decision_tree_pvc.h  geqrf_batched_panel_decision.h  geqrf_panel_decision_a100.h  geqrf_panel_decision_h100.h  geqrf_panel_decision_mi100.h  geqrf_panel_decision_mi300a.h  get_batched_crossover.cpp  get_batched_gbtrf_params.cpp  get_batched_gemm_decision.cpp  get_nb.cpp  get_ntcol.cpp  getrs_gpu_param.h  iprint.cpp  magma.F90  magma_cf77.cpp  magma_cfortran.F90  magma_df77.cpp  magma_dfortran.F90  magma_f77.cpp  magma_internal.h  magma_sf77.cpp  magma_sfortran.F90  magma_threadsetting.cpp  magma_tuning_trees.cpp  magma_tuning_trees.h  magma_zf77.cpp  magma_zfortran.F90  magma_znan_inf.cpp  magmablas_cf77.cpp  magmablas_cfortran.F90  magmablas_df77.cpp  magmablas_dfortran.F90  magmablas_sf77.cpp  magmablas_sfortran.F90  magmablas_zf77.cpp  (+3 more)
docs/: Doxyfile  Doxyfile-fast  Doxyfile-test  DoxygenLayout.xml  Makefile  contributors-guide.txt  documentation-sparse.txt  documentation.txt  groups.dox  magma-filter.pl
example/: Makefile  example_f.F90  example_sparse.c  example_sparse_operator.c  example_v2.c
fortran/: Makefile  magma2.F90  magma2_common.F90  magma2_zfortran.F90
include/: Makefile.src  magma.h  magma_auxiliary.h  magma_batched.h  magma_config.h.in  magma_copy_v1.h  magma_hbatched.h  magma_hip_complex.h  magma_htc.h  magma_lapack.h  magma_mangling.h  magma_mangling_cmake.h  magma_operators.h  magma_types.h  magma_v2.h  magma_vbatched.h  magma_z.h  magma_zbatched.h  magma_zbulge.h  magma_zlapack.h  magma_zvbatched.h  magmablas.h  magmablas_h.h  magmablas_v1.h  magmablas_z.h  magmablas_z_v1.h  magmablas_zc_v1.h
interface_cuda/: Makefile.src  alloc.cpp  blas_h_v2.cpp  blas_z_v2.cpp  connection_mgpu.cpp  copy_v1.cpp  copy_v2.cpp  error.cpp  error.h  interface.cpp  interface_v1.cpp
interface_sycl/: Makefile.src  alloc.dp.cpp  blas_h_v2.dp.cpp  blas_z_v1.cpp  blas_z_v2.dp.cpp  connection_mgpu.dp.cpp  copy_v1.dp.cpp  copy_v2.dp.cpp  error.dp.cpp  error.h  interface.dp.cpp  interface_v1.dp.cpp
magmablas/: Makefile.src  atomics.cuh  blas_zbatched.cpp  blasf77_zbatched.cpp  cgemm.cu  cgemm_batched_core.cu  cgemm_fermi_kernels.h  cgemm_vbatched_core.cu  cgemv_batched_core.cu  cgesvj_heevj_vector_updates.cu  cherk_batched_core.cu  dgemm.cu  dgemm_batched_core.cu  dgemm_fermi_kernels.h  dgemm_vbatched_core.cu  dgemv_batched_core.cu  dgesvj_heevj_vector_updates.cu  dsiinertia.cu  dsyrk_batched_core.cu  dznrm2.cu  gemm_kernel.cuh  gemm_stencil.cuh  gemm_stencil_defs.h  gemm_template_device.cuh  gemm_template_device_defs.cuh  gemm_template_kernel.cuh  gemm_template_kernel_batched.cuh  gemm_template_kernel_vbatched.cuh  gemv_template_kernel_batched.cuh  gemv_template_kernel_vbatched.cuh  gesvj_kernels.cuh  getrf_setup_pivinfo.cu  hemm_template_kernel.cuh  hemm_template_kernel_batched.cuh  hemm_template_kernel_vbatched.cuh  hemv_template_device.cuh  hemv_template_kernel_batched.cuh  hemv_template_kernel_vbatched.cuh  herk_template_kernel_batched.cuh  herk_template_kernel_vbatched.cuh  (+174 more)
magmablas_sycl/: Makefile.src  atomics.dp.hpp  blas_zbatched.cpp  cgemm.dp.cpp  cgemm_batched_core.dp.cpp  cgemm_fermi_kernels.h  cgemm_vbatched_core.dp.cpp  cgemv_batched_core.dp.cpp  cgemv_vbatched_core.dp.cpp  cherk_batched_core.dp.cpp  cherk_vbatched_core.dp.cpp  clag2z.dp.cpp  clat2z.dp.cpp  commonblas_z.h  dgemm.dp.cpp  dgemm_batched_core.dp.cpp  dgemm_fermi_kernels.h  dgemm_vbatched_core.dp.cpp  dgemv_batched_core.dp.cpp  dgemv_vbatched_core.dp.cpp  dsyrk_batched_core.dp.cpp  dsyrk_vbatched_core.dp.cpp  dznrm2.dp.cpp  gemm_kernel.dp.hpp  gemm_kernel_batched.dp.hpp  gemm_stencil.dp.hpp  gemm_stencil_defs.h  gemm_template_device.dp.hpp  gemm_template_device_defs.dp.hpp  gemm_template_kernel.dp.hpp  gemm_template_kernel_batched.dp.hpp  gemm_template_kernel_vbatched.dp.hpp  gemv_template_device.dp.hpp  gemv_template_kernel_batched.dp.hpp  gemv_template_kernel_vbatched.dp.hpp  getrf_setup_pivinfo.dp.cpp  hemm_template_device.dp.hpp  hemm_template_kernel.dp.hpp  hemm_template_kernel_batched.dp.hpp  hemm_template_kernel_vbatched.dp.hpp  (+204 more)
make.inc-examples/: make.inc.PAPI_SDE-mkl-gcc  make.inc.acml  make.inc.aocl-blis  make.inc.atlas  make.inc.hip-gcc-mkl  make.inc.hip-gcc-openblas  make.inc.hip-mkl-gcc  make.inc.hip_openblas  make.inc.ig.pgi  make.inc.inteldev  make.inc.macos  make.inc.macos-debug  make.inc.macos-mkl  make.inc.macos-openmp  make.inc.mkl-gcc  make.inc.mkl-gcc-debug  make.inc.mkl-gcc-ilp64  make.inc.mkl-gcc-ilp64-debug  make.inc.mkl-icc  make.inc.mkl-icc-debug  make.inc.mkl-icc-ilp64  make.inc.mkl-icc-ilp64-debug  make.inc.mkl-icx  make.inc.mkl-icx-debug  make.inc.mkl-icx-ilp64  make.inc.mkl-icx-ilp64-debug  make.inc.openblas  make.inc.openblas-debug  make.inc.openblas-gcc-hip  make.inc.power9-essl
scripts/: convert_v2_readme.txt  convert_v2_zgehrd.html  convert_v2_zgeqrf_gpu.html
sparse_sycl/: DevNotes.md  MainSourceFiles.yaml  Makefile.src  sparse_dpct_out.stats.csv
src/: Makefile.src  cblas_z.cpp  core_zlarfy.cpp  dbulge_aux.cpp  dfgmres_spd_gpu.cpp  dgeev.cpp  dgeev_m.cpp  dgmres_plu_gpu.cpp  dlaex0.cpp  dlaex0_m.cpp  dlaex1.cpp  dlaex3.cpp  dlaex3_m.cpp  dshposv_gmres_gpu.cpp  dsidi.cpp  dssyevdx.cpp  dssyevdx_2stage.cpp  dssysicesm.cpp  dsyevd.cpp  dsyevd_gpu.cpp  dsyevd_m.cpp  dsyevdx.cpp  dsyevdx_gpu.cpp  dsyevdx_m.cpp  dsygvdx.cpp  dxgesv_gmres_gpu.cpp  shpotrf_gpu.cpp  xhsgetrf_gpu.cpp  xshgetrf_gpu.cpp  zbulge_applyQ_v2.cpp  zbulge_applyQ_v2_m.cpp  (+121 more)
(+552 files in other folders)
